[gd_scene load_steps=5 format=3 uid="uid://2l4k5j7qc47v"]

[ext_resource type="Theme" uid="uid://dyjxxuidige6x" path="res://resources/card_theme.tres" id="1_7vkkc"]
[ext_resource type="Script" uid="uid://dhiydrjm8gxld" path="res://components/Card/Card.gd" id="1_ojsuk"]
[ext_resource type="Texture2D" uid="uid://bfkmoktygl0yh" path="res://assets/images/card_front.png" id="2_ojsuk"]
[ext_resource type="Texture2D" uid="uid://cwolg3o3xxme3" path="res://assets/images/placeholder.png" id="3_rdgjo"]

[node name="Card" type="Node2D"]
script = ExtResource("1_ojsuk")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -190.0
offset_right = 142.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_7vkkc")
texture = ExtResource("2_ojsuk")
metadata/_edit_use_anchors_ = true

[node name="ImageContainer" type="Control" parent="Background"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 21.0
offset_right = -20.0
grow_horizontal = 2

[node name="CardImage" type="TextureRect" parent="Background/ImageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rdgjo")
expand_mode = 2
stretch_mode = 5

[node name="TextPanel" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_right = -22.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0

[node name="CardTitle" type="Label" parent="Background/TextPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 42.0
grow_horizontal = 2
text = "Card Title"
horizontal_alignment = 1

[node name="CardDescription" type="RichTextLabel" parent="Background/TextPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 48.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Effect text here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81
anchor_top = 0.037
anchor_right = 0.951
anchor_bottom = 0.142
offset_left = -0.0400238
offset_top = -0.0600004
offset_right = -0.0840149
offset_bottom = 0.0399971
grow_horizontal = 0
color = Color(0, 0, 0, 0.266667)

[node name="CardCost" type="Label" parent="Background/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
